--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,9 @@
     "huanlphp/request": "dev-master"
   },
   "autoload": {
+    "files": [
+      "functions.php"
+    ],
     "psr-4": {
       "HuanL\\Core\\": ""
     }
