--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "php": "^7.1",
     "huanlphp/container": "dev-master",
     "huanlphp/routing": "dev-master",
-    "huanlphp/request": "dev-master"
+    "huanlphp/request": "dev-master",
+    "monolog/monolog":"^1.2"
   },
   "autoload": {
     "files": [
