--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "huanlphp/container": "dev-master",
     "huanlphp/routing": "dev-master",
     "huanlphp/request": "dev-master",
+    "huanlphp/viewdeal":"dev-master",
     "monolog/monolog":"^1.2"
   },
   "autoload": {
