配置文件的二次读取和phpunit的测试类

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "huanlphp/viewdeal": "dev-master",
     "huanlphp/db": "dev-master",
     "huanlphp/verify": "dev-master",
+    "huanlphp/extend": "dev-master",
     "monolog/monolog": "^1.2"
   },
   "autoload": {
